ui: fix status label on branches list vertical alignment (#11109)
change status icon for merged PR to git-merge

--- a/web_src/less/_base.less
+++ b/web_src/less/_base.less
@@ -1229,11 +1229,11 @@ i.icon.centerlock {
     text-overflow: ellipsis;
 }
 
-.language-label {
+.text-label {
     display: inline-flex !important;
     align-items: center !important;
 }
 
-.language-label .color-icon {
+.text-label .color-icon {
     position: static !important;
 }
